videofilter: Unmap input frame if mapping output frame failed

https://bugzilla.gnome.org/show_bug.cgi?id=785341